# Blazing_Sun_old

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Generic/Engine/: Collider.cpp  Collider.h  GameObjectFactory.cpp  GameObjectFactory.h  Movement.cpp  Movement.h
src/Generic/Engine/Interfaces/: Collidable.h  Movable.h
src/Generic/GameObject/: Character.cpp  Character.h  Decoration.cpp  Decoration.h  Entity.cpp  Entity.h  Foreground.cpp  Foreground.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  Interface.cpp  Interface.h  Player.cpp  Player.h
src/Generic/Network/: Client.cpp  Client.h  Server.cpp  Server.h
src/Generic/ResourceManager/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  CompositeResource.cpp  CompositeResource.h  CompositeRessource.cpp  CompositeRessource.h  Resource.cpp  Resource.h  ResourceDescriptor.cpp  ResourceDescriptor.h  ResourceManager.cpp  ResourceManager.h  Ressource.cpp  Ressource.h  RessourceDescriptor.cpp  RessourceDescriptor.h
src/Generic/ResourceManager/Information/: FilePath.cpp  FilePath.h  InformationHolder.cpp  InformationHolder.h
src/Generic/Utility/: GameException.cpp  GameException.h  Holder.hpp  TypeComparisonStruct.hpp  Typedef.hpp  point.hpp  polygon.hpp  vector3.hpp
src/Generic/Utility/exception/: GameException.h  invalid_gameobject.cpp  invalid_gameobject.h
src/Specific/: MACROS.h
